Fixed Safari layout bug, added floppy link

--- a/source/components/c-button/_c-button.scss
+++ b/source/components/c-button/_c-button.scss
@@ -11,7 +11,7 @@
 // Component Styling ----------------------------------------------------------
 .c-button {
     @include component-align(float, end);
-    @include component-size(ms(1.75, rem), ms(5, rem), ms(1.25, rem));
+    @include component-size(ms(1.75, rem), ms(5, rem), ms(2.75, rem));
 
     margin-right: ms(1, rem);
 
